test/corpus/repository_definition.txt
==================
Repository Definition with and without quoted identifier
==================

Repository(foo, "http://example.com/");
Repository("foo", "http://example.com/");

---

(diagram
  (repository_definition
    (identifier)
    (url)
  )
  (repository_definition
    (identifier)
    (url)
  )
)
